--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,4 +8,7 @@
   .pagetitle {
     @apply flex items-center justify-center sticky text-slate-50 top-0 w-full h-16 sm:hidden z-50 rounded-b-2xl;
   }
+  .navigation {
+    @apply fixed bottom-0 flex w-full h-16 shadow-lg sm:top-0 rounded-t-2xl sm:rounded-b-xl sm:rounded-t-none z-50;
+  }
 }
