--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,8 @@
 
 @layer components {
   .pagetitle {
-    @apply flex items-center justify-center sticky text-slate-50 top-0 w-full h-16 sm:hidden z-50 rounded-b-2xl;
+    @apply flex items-center justify-center sm:fixed bottom-0 
+    text-slate-50 w-full h-16 z-50 rounded-b-2xl sm:rounded-t-2xl sm:rounded-b-none;
   }
   .navigation {
     @apply fixed bottom-0 flex w-full h-16 shadow-lg sm:top-0 rounded-t-2xl sm:rounded-b-xl sm:rounded-t-none z-50;
